--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - pip install six
-  - pip install numpy
-  - pip install coveralls
+  - pip install -U six
+  - pip install -U numpy
+  - pip install -U coveralls
 script:
   - coverage run setup.py test
 after_success:
