--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
   - "3.5"
   - "3.6"
 install:
+  - pip install -U pip
+  - pip install -U setuptools
   - pip install -U six
   - pip install -U numpy
   - pip install -U coveralls
