--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,20 @@ python:
   - "3.5"
   - "3.6"
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install --only-upgrade -y sqlite3
+  - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH=$HOME/miniconda/bin:$PATH
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q --all
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - source activate test-environment
+  - conda update -q --all
+  - conda info -a
+  - python --version
 install:
-  - pip install -U pip
-  - pip install -U setuptools
-  - pip install -U six
-  - pip install -U numpy
+  - conda install nomkl
+  - conda install -q six numpy
   - pip install -U coveralls
 script:
   - coverage run setup.py test
