--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,9 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-before_install:
-  - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH=$HOME/miniconda/bin:$PATH
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q --all
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - source activate test-environment
-  - conda update -q --all
-  - conda info -a
-  - python --version
 install:
-  - conda install -q nomkl
-  - conda install -q six numpy
-  - pip install --no-deps zstandard
-  - pip install -U coveralls
+  - pip install -U pip setuptools
+  - pip install -U six numpy zstandard coveralls
 script:
   - coverage run setup.py test
 after_success:
