--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
   - pip install -U pip setuptools
   - pip install -U six numpy zstandard coveralls
+  - pip list
 script:
   - coverage run setup.py test
 after_success:
