--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 install:
   - pip install -U pip setuptools
   - pip install -U tox tox-venv tox-travis
+  - pip install -U coveralls
 
 script:
   - tox
