--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,9 @@
 
 name: pybgen-test
 
-on: [push]
+on:
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -19,6 +21,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install tox tox-gh-actions
 
     - name: Test with tox
       run: tox
