Added python 3.10 to the tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-envlist = py27,py36,py37,py38,py39
+envlist = py27,py36,py37,py38,py39,py310
 
 [gh-actions]
 python =
-    2.7: py27
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
+    2.7:  py27
+    3.6:  py36
+    3.7:  py37
+    3.8:  py38
+    3.9:  py39
+    3.10: py310
 
 [testenv]
 deps =
